# rossmann-analytics-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: router.py
backend/src/core/: config.py  dependencies.py  errors.py
backend/src/db/: session.py
backend/src/observability/: __init__.py  analytics_logging.py
backend/src/repositories/: __init__.py  base.py  forecast_repository.py  kpi_repository.py  local_auth_repository.py  sales_repository.py  store_repository.py
backend/src/schemas/: __init__.py  auth.py  common.py  forecasts.py  kpis.py  sales.py  stores.py
backend/src/security/: __init__.py  access_tokens.py  context.py  demo_auth.py  dependencies.py  jwt.py  passwords.py
backend/src/services/: __init__.py  forecast_service.py  kpi_service.py  local_auth_service.py  store_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_forecasts_api.py  test_kpis_api.py  test_sales_api.py  test_stores_api.py
backend/tests/integration/: test_auth_baseline.py  test_dashboard_access.py  test_forecast_access.py  test_rls_baseline.py
backend/tests/unit/: test_forecast_service.py  test_store_service.py
data/: README.md  package-lock.json  package.json  pyproject.toml
data/src/ingest/: __init__.py  read_store_csv.py  read_train_csv.py
data/src/load/: __init__.py  load_operational_tables.py
data/src/marts/: __init__.py  build_daily_kpi.py  build_periodic_kpis.py  refresh_kpis.py
data/src/runs/: __init__.py  (+4 more)
data/tests/: conftest.py
(+93 files in other folders)
